--- a/index.html
+++ b/index.html
@@ -46,23 +46,11 @@
                 <p>Brussels, 24 September 2024</p>
             </section>
             
-            <section class="ecl-container">
-                <h2>Introduction to PPDS</h2>
-                <ul>
-                    <li>Enables easy access to public procurement data to all user groups</li>
-                    <li>Improves monitoring of public procurement in the EU</li>
-                    <li>Reinforces transparency</li>
-                    <li>Supports improving data quality</li>
-                    <li>Raises awareness of the level of competition in public procurement</li>
-                    <li>Supports cooperation between Member States and Commission</li>
-                    <li>Is open source allowing Member States to re-use the solution</li>
-                </ul>
-            </section>
 
             <!-- The PPDS Overview -->
             <section>
                 <h2>The PPDS</h2>
-                <p>The PPDS is a powerful tool that enhances transparency and efficiency in public procurement across the EU.</p>
+                <p>The PPDS is a powerful tool that enhances the use of public procurement data in Europe.</p>
             </section>
 
             <!-- The PPDS in Figures -->
@@ -79,9 +67,9 @@
             <section>
                 <h2>Live Demo of the PPDS Analytics Toolkit</h2>
                 <ul>
-                    <li>Strategic Procurement measurement</li>
                     <li>Monitoring of Public Procurement market</li>
-                    <li>Data Quality measurement</li>
+                    <li>Strategic Procurement measurement</li>
+                    <li>Data Quality assessment</li>
                 </ul>
             </section>
             
