--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
     <script src="plugin/highlight/highlight.js"></script>
     <script>
 		Reveal.initialize({
-			controls: true,
-			progress: true,
+			controls: false,
+			progress: false,
 			center: true,
 			hash: true,
 			width: '100%',
