--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <!-- Include Reveal.js core styles -->
     <link rel="stylesheet" href="dist/reveal.css">
-    <link rel="stylesheet" href="dist/theme/night.css" id="theme">
+    <link rel="stylesheet" href="dist/theme/serif.css" id="theme">
 
     <!-- Custom Styles -->
     <style>
