--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                 </section>
                 
                 <section>
-                    <img src="images/SPARQL_tool.gif" alt="SPARQL Tool Demo" style="max-width: 70%; height: auto;">
+                    <img src="images/PPDS_toolkit.webp" alt="SPARQL Tool Demo" style="max-width: 70%; height: auto;">
                 </section>
             
             </section>
