--- a/index.html
+++ b/index.html
@@ -109,10 +109,10 @@
 
             <!-- PPDS Speed Tour -->
             <section>
-                <h2>PPDS – A Speed Tour</h2>
+                <h2>PPDS – A Speed tour of some of the apps</h2>
                 
                 <section>
-                    <h3>A tour of different parts of the PPDS: SPARQL dashboards, policy tools, graph exploration, and natural language questions.</h3>
+                    <h3>A tour of some of the applications currently using the PPDS. More applications and use cases can be integrated within the data space</h3>
                     <!-- Indicator for Vertical Slides -->
                 </section>
                 
