--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <section>
                 <h2>The PPDS in a snapshot</h2>
                 <section>
-                    <h3>More than 1 half a million procurement notices per year</h3>
+                    <h3>More than 1 million procurement notices per year</h3>
                 </section>
                 <section>
                     <h3>Capacity to transform 70,000 files in any data model to eProcurement Ontology (ePO)</h3>
@@ -98,12 +98,12 @@
             </section>
             
             <!-- Actual Demo - Indicator -->
-            <section data-background-iframe="https://api.public-procurement-data-space.europa.eu:8888/superset/dashboard/p/6d1ADlXDOz0/"
+            <section data-background-iframe="https://api.public-procurement-data-space.europa.eu:8888/superset/dashboard/12/?standalone=true"
                 data-background-interactive>
             </section>
 
             <!-- Actual Demo - Strategic Procurement -->
-			<section data-background-iframe="https://api.public-procurement-data-space.europa.eu:8888/superset/dashboard/p/a1wqL2lgdmX/"
+			<section data-background-iframe="https://api.public-procurement-data-space.europa.eu:8888/superset/dashboard/11/?standalone=true"
 				data-background-interactive>
 			</section>
 
