update link to dashboard.

--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
                 </section>
             </section>
             
-            <!-- Actual Demo - Indicator -->
-            <section data-background-iframe="https://api.public-procurement-data-space.europa.eu:8888/superset/dashboard/12/?standalone=true"
+            <!-- Actual Demo - Indicator SME bids -->
+            <section data-background-iframe="https://api.public-procurement-data-space.europa.eu:8888/superset/dashboard/3/?standalone=true"
                 data-background-interactive>
             </section>
 
